[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/HealthSystem.gd" type="Script" id=1]
[ext_resource path="res://sprites/hearts.png" type="Texture" id=2]

[node name="HealthSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="Heart0" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="Heart1" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )
hframes = 3

[node name="Heart2" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 2 )
hframes = 3
